--- a/styles.css
+++ b/styles.css
@@ -43,18 +43,11 @@ body h1 {
   background-color: #e3e7ec;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-grow: 1;
-  min-height: 100%;
-}
-
-.content-section {
-  display: flex;
   justify-content: start;
   align-items: start;
   flex-direction: column;
+  flex-grow: 1;
+  min-height: 100%;
   width: 100%;
   margin-bottom: 3rem;
 }
@@ -71,6 +64,18 @@ body h1 {
   align-items: start;
   flex-direction: column;
   width: 100%;
+}
+.content-div #income-button,
+.income-div #income-button,
+.expenses-div #income-button {
+  color: white;
+  background-color: #4caf50;
+}
+.content-div #expense-button,
+.income-div #expense-button,
+.expenses-div #expense-button {
+  color: white;
+  background-color: rgb(239, 108, 108);
 }
 .content-div #income-card-container,
 .content-div #expense-card-container,
@@ -179,7 +184,7 @@ body h1 {
 .expenses-div #income-card-container .expense-card-div .expense-value,
 .expenses-div #expense-card-container .income-card-div .expense-value,
 .expenses-div #expense-card-container .expense-card-div .expense-value {
-  color: rgb(255, 69, 58);
+  color: rgb(239, 108, 108);
 }
 
 #footer-container {
